syntax = "proto3";
package pb;
option go_package = "../pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResponse {
    string status = 1;
    User user = 2;
}

message Users {
    repeated User users = 1;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserVerbose (User) returns (stream UserResponse);
    rpc AddUsers (stream User) returns (Users);
    rpc AddUsersBothStream(stream User) returns (stream UserResponse);
}